# streamripper

./: .cvsignore  .gitignore  CHANGES  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.md  THANKS  TODO  config.sh  configure  configure.ac  configure.in  extra.conf  fake_external_metadata.pl  fetch_external_metadata.pl  gcs_notes.txt  make-dist.sh  makedist_win.bat  parse_rules.txt  readme_xfade.txt  streamripper.1  streamripper.1.asc  upgrade_version.pl
BeOS/: BeOS
StreamRipper32/: FolderDialog.cpp  FolderDialog.h  MPEG.CPP  MPEG.H  MirrorSelect.cpp  MirrorSelect.h  ResizableDialog.h  SRipper.cpp  SRipper.h  SRipperDlg.cpp  SRipperDlg.h  StdAfx.cpp  StdAfx.h  StreamRipper32.dsp  StreamRipper32.dsw  StreamRipper32.nsi  StreamRipper32.rc  TYPES.H  httprequest.cpp  mpglib.dsp  resource.h  streamripperlib.dsp
StreamRipper32/DOC/: AUTHORS  CHANGES  COPYING  INSTALL  Readme  Streamripper32Logo.psd  streamripper32.html
StreamRipper32/RES/: SRipper.rc2
cdk-5.0-20060507/: Makefile.in  README  aclocal.m4  alphalist.c  binding.c  button.c  buttonbox.c  calendar.c  cdk.c  cdk.spec  cdk_compat.c  cdk_display.c  cdk_objs.c  cdk_params.c  cdkscreen.c  configure  configure.in  dialog.c  entry.c  fselect.c  gen-scale.c  gen-scale.sh  gen-slider.c  graph.c  headers.sh  histogram.c  itemlist.c  label.c  manlinks.sed  manlinks.sh  marquee.c  matrix.c  mentry.c  menu.c  popup_label.c  position.c  radio.c  scroll.c  selection.c  swindow.c  (+4 more)
cdk-5.0-20060507/cli/: Makefile.in  cdkalphalist.c  cdkcalendar.c  cdkdialog.c  cdkentry.c  cdkfselect.c  cdkitemlist.c  cdklabel.c  cdkmatrix.c  cdkmentry.c  cdkradio.c  cdkscale.c  cdkscroll.c  cdkselection.c  cdkslider.c  cdktemplate.c  cdkviewer.c
cdk-5.0-20060507/demos/: Makefile.in  appointment.c  clock.c  command.c  fileview.c  rolodex.c  rolodex.h  serial.c  stopSign.c  syb.c  vinstall.c
cdk-5.0-20060507/examples/: Makefile.in  alphalist_ex.c  bind_ex.c  buttonbox_ex.c  calendar_ex.c  cdkscreen_ex.c  dialog_ex.c  entry_ex.c  fscale_ex.c  fselect_ex.c  fslider_ex.c  graph_ex.c  hello_ex.c  histogram_ex.c  itemlist_ex.c  label_ex.c  lowerCDKObject_ex.c  marquee_ex.c  matrix_ex.c  mentry_ex.c  menu_ex.c  position_ex.c  preprocess_ex.c  radio1_ex.c  radio_ex.c  raiseCDKObject_ex.c  scale_ex.c  scroll_ex.c  selection_ex.c  slider_ex.c  subwindow_ex.c  swindow_ex.c  template_ex.c  traverse_ex.c  uslider_ex.c  viewer_ex.c  viewer_ex2.c
cdk-5.0-20060507/include/: alphalist.h  binding.h  buttonbox.h  cdk.h  cdk_compat.h  cdk_int.h  cdk_objs.h  cdk_params.h  cdk_test.h  cdk_util.h  cdk_version.hin  cdkscreen.h  dialog.h  fselect.h  menu.h  radio.h  scroll.h  selection.h  traverse.h
cdk-5.0-20060507/man/: cdk.3  cdk_alphalist.3  cdk_binding.3  cdk_button.3  cdk_buttonbox.3  cdk_calendar.3  cdk_compat.3  cdk_dialog.3  cdk_display.3  cdk_draw.3  cdk_entry.3  cdk_fselect.3  cdk_graph.3  cdk_histogram.3  cdk_itemlist.3  cdk_label.3  cdk_marquee.3  cdk_matrix.3  cdk_mentry.3  cdk_menu.3  cdk_misc.3  cdk_objs.3  cdk_params.3  cdk_process.3  cdk_radio.3  cdk_screen.3  cdk_scroll.3  cdk_selection.3  cdk_swindow.3  cdk_template.3  cdk_traverse.3  cdk_util.3  cdk_viewer.3  gen-scale.3  gen-slider.3
console/: Makefile.in  cstreamripper.c  streamripper.c
consoleWin32/: consoleWin32.dsp  consoleWin32.dsw  cstreamripper.dsp  streamripper.dsp
glib-2.16.6/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
glib-2.16.6/docs/: Makefile.in
glib-2.16.6/gio/: Makefile.in
glib-2.16.6/glib/: Makefile.in  gconvert.c  gdate.c  gdir.c  gfileutils.c  gstdio.c  gutils.c  gwin32.c  gwin32.h  relink-unicows.sh
glib-2.16.6/gmodule/: Makefile.in
iconv-win32-1.11/: charset.lib  iconv.lib
lib/: Makefile.am  Makefile.in  callback.c  callback.h  cbuf2.c  cbuf2.h  cbuf3.c  cbuf3.h  cbuffer.c  cbuffer.h  compat.h  config.h.in  confw32.h  debug.c  debug.h  errors.c  errors.h  external.c  external.h  filelib.c  filelib.h  findsep.c  findsep.h  findsep2.c  glib_iconv_test.c  http.c  http.h  ictest.c  inet.c  inet.h  list.h  live365info.c  live365info.h  mchar.c  mchar.h  mpeg.c  mpeg.h  parse.c  parse.h  prefs.c  (+27 more)
libmad/: Makefile.in  config.cache  config.h  configure  global.h  layer3.c  libtool  mad.h  timer.c
libmad-0.15.1b/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
m4/: mp_with_curses.m4
mpglib/: Makefile.in  VbrTag.c  VbrTag.h  common.c  dct64.c  decode.c  interface.c  layer3.c  mpg123.h  tabinit.c
tinytest/: ReadMe.txt  tinytest.c  tinytest.dsp  tinytest.dsw
tracksplitter/: Mp3Decoder.cpp  Mp3Decoder.h  StdAfx.h  TrackSplitter.cpp  TrackSplitter.h  common.h  getopt.c  getopt.h  log.cpp  main.cpp  tracksplitter.dsp  tracksplitter.dsw
tre-0.7.0/: ChangeLog  Makefile.in  NEWS  TODO  aclocal.m4  config.h.in  configure.ac  tre.spec.in
tre-0.7.0/lib/: Makefile.am  Makefile.in  README  regcomp.c  regerror.c  regexec.c  tre-compile.c  tre-config.h.in  tre-internal.h  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-match-utils.h  tre-mem.c
tre-0.7.0/po/: fi.po  (+2 more)
tre-0.7.2/: ChangeLog  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
wa3_wac/: options.c  options.h  resource.h  sripper.cpp  sripper.dsp  sripper.dsw  sripper.h  sripper.rc  sripperwnd.cpp  sripperwnd.h  waplugin.nsi
win32/: plugin_dll.dsp  plugin_dll.vcproj  streamripper.def  streamripper.dsw  streamripper.sln  streamripper_dll.dsp  streamripper_dll.vcproj  streamripper_exe.dsp  streamripper_exe.vcproj  wstreamripper_exe.dsp  wstreamripper_exe.vcproj
winamp_plugin/: HOWTO.txt  HOWTOCOMPILE.txt  SRIPPER_HOWTO.TXT  Script.aps  Script.rc  dock.c  dock.h  dsp_sripper.c  dsp_sripper.h  dsp_sripper.psc  new_skin.psd  old_skin.psd  options.c  options.h  plugin_dll.dsp  plugin_dll_main.c  plugin_exe.dsp  plugin_main.c  registry.c  registry.h  render.c  render.h  render_2.c  resource.h  skin.psd  skin_layout.psd  sr163.nsi  sr2x.nsi  sr_winamp.dsp  sr_winamp.dsw  sr_winamp_163.dsw  touch_page.c  touch_page.h  winamp.c  winamp.h  winamp_dll.c  winamp_dll.h  winamp_hook.c  winamp_hook.h  wstreamripper.h
(+138 files in other folders)
